--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,7 @@
  <header class="header">
-  
+  <div class="header-container">
+  <div class="logo-group">
+      <%= image_tag("logo.png", alt: "SkyReady Logo", class: "logo-img") %>
+  </div>
+  </div>
 </header>
