--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,5 +3,8 @@
   <div class="logo-group">
       <%= image_tag("logo.png", alt: "SkyReady Logo", class: "logo-img") %>
   </div>
+  <nav class="nav-links">
+      <%= link_to "Home", root_path, class: "nav-button" %>
+  </nav>
   </div>
 </header>
