Add About Us navigation link with nav-button styling

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,6 +5,7 @@
   </div>
   <nav class="nav-links">
       <%= link_to "Home", root_path, class: "nav-button" %>
+      <%= link_to "About Us", "#", class: "nav-button" %>
   </nav>
   </div>
 </header>
