--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -5,6 +5,7 @@
   background-color: white;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
+  font-family: 'Poppins', sans-serif;
 }
 
 .header-container {
