--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,9 +1,9 @@
-.about-us-container{
+.about-us-container {
   padding: 15px;
 }
 
 #about-us {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: rgba(215, 225, 255, 0.3);
   display: flex;
   align-items: center;
@@ -15,7 +15,7 @@
 
 #about-us:hover {
   transform: scale(1.007);
-  box-shadow:  0 6px 18px rgba(0, 0, 0, 0.08);;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
   background-color: rgba(215, 225, 255, 0.45);
 }
 
@@ -27,7 +27,7 @@
   align-items: center;
   justify-content: center;
   text-align: left;
-  gap: 1.0rem;
+  gap: 1rem;
   padding: 0.5rem 5rem;
   padding-bottom: 1rem;
 }
@@ -80,3 +80,51 @@
   }
 }
 
+#slider {
+  width: 100%;
+  height: 470px;
+  margin: 0px auto;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  object-fit: cover;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#slider:hover {
+  transform: scale(1.02);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.home-wrapper {
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin: 0 auto;
+}
+.slider-container {
+  position: relative;
+  width: 100%;
+  height: 470px;
+  overflow: hidden;
+}
+.slider-text {
+  position: absolute;
+  top: 50px;
+  left: 80px;
+  color: white;
+  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.slider-text h1 {
+  font-size: 3rem;
+  margin: 0;
+}
+
+.slider-text p {
+  font-size: 1rem;
+  margin: 5px 0 0 0;
+  background-color: #000080;
+  padding: 6px 12px;
+  border-radius: 20px;
+  display: inline-block;
+}
