Render search component in home

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
    <h1>One Tap To Take Off</h1>
   </div>
 </div>
-
+<%= render 'shared/search' %>
   <div class='about-us-container'>
     <section id="about-us">
       <div class="about-container">
