--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -1,14 +1,16 @@
 .input-dropdown {
   position: relative;
   width: 200px;
-  margin: 0 10px;
+  margin: 0;
 }
 
 .input-dropdown input {
-  width: 90%;
-  padding: 8px;
+  width: 85%;
+  padding: 8px 16px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.8rem;
 }
 
 .dropdown-list {
@@ -46,17 +48,16 @@
   background: #ffffff;
   padding: 30px;
   border-radius: 8px;
-  margin-top: -80px;
-  margin-bottom: 80px;
+  margin-top: 0 auto;
   position: relative;
   box-shadow: 0 10px 18px rgba(0, 0, 0, 0.08);
-  max-width: 1000px;
+  max-width: 1000px;  
 }
 
 .input-fields-row {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 40px;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -67,6 +68,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin-top: -80px;
 }
 
 .search-button {
@@ -82,7 +84,6 @@
 .search-error {
   color: red;
   font-size: 0.95rem;
-  margin-top: 8px;
   text-align: center;
 }
 
