Add event listener for slider on reloading

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,7 +38,7 @@
 </div>
 
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener("turbo:load", function() {
     const images = [
       "<%= asset_path('slide1.jpg') %>",
       "<%= asset_path('slide2.jpg') %>",
