--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -27,10 +27,9 @@
 }
 .nav-links {
   display: flex;
-  gap: 5rem;
+  gap: 3rem;
   flex-wrap: wrap;
   margin-left: auto;
-  margin-right: 20rem;
 }
 
 .nav-button {
@@ -49,25 +48,25 @@
 }
 @media (max-width: 768px) {
   .header-container {
+    display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    padding: 1rem;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.3rem 2rem;
   }
 
   .nav-links {
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 1rem;
-    margin-top: 1rem;
+    gap: 2rem;
     margin-left: 0;
     margin-right: 0;
-    justify-content: flex-start;
   }
 
   .nav-button {
     width: auto;
     text-align: center;
     font-size: 1rem;
-    padding: 0.6rem 1.4rem;
+    padding: 0.4rem 1.4rem;
   }
 }
