--- a/app/views/shared/_flight_result_card.html.erb
+++ b/app/views/shared/_flight_result_card.html.erb
@@ -16,10 +16,16 @@
 
       <div class="route-arrow">➡️</div>
 
-      <div class="arrival-block">
+    <div class="arrival-block">
+      <div class="time-container">
         <span class="time">🛬 <%= flight[:arrival_time] %></span>
-        <span class="city"><%= flight[:destination] %></span>
+        <% if flight[:arrival_date_difference].present? %>
+          <span class="date-diff"><%= flight[:arrival_date_difference] %></span>
+        <% end %>
       </div>
+      <span class="city"><%= flight[:destination] %></span>
+    </div>
+
 
       <div class="seats-block">
         <span class="time">Seats Available</span>
