--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -44,7 +44,7 @@
   border-radius: 8px;
   position: relative;
   box-shadow: 0 10px 18px rgba(0, 0, 0, 0.08);
-  max-width: 1000px;
+  max-width: 1200px;
 }
 .input-field input[type="date"] {
   width: 100%;
@@ -120,8 +120,7 @@
   color: #333;
 }
 
-.input-dropdown input[type="text"],
-.input-dropdown input[type="date"] {
+.input-dropdown input[type="text"] {
   width: 100%;
   padding: 8px;
   border: 1px solid #ccc;
@@ -131,7 +130,12 @@
 }
 
 .date-picker {
-  appearance: none;
+  width: 100%;
+  height: 23px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 10px;
+  font-family: "Poppins", sans-serif;
 }
 
 .search-error {
@@ -152,10 +156,17 @@
   background: white;
   font-family: "Poppins", sans-serif;
 }
+.traveller-counter input[type="number"]::-webkit-outer-spin-button,
+.traveller-counter input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
 .traveller-counter input[type="number"] {
   flex: 1;
-  padding: 8px;
+  padding: 10px;
+  width: 20px;
+  padding: 0rem 1rem;
   border: none;
   outline: none;
   font-size: 14px;
@@ -165,8 +176,8 @@
 }
 
 .counter-btn {
-  width: 30px;
-  height: 38px;
+  width: 100%;
+  padding: 10px;
   border: none;
   background: #f8f9fa;
   cursor: pointer;
