Add book button with link path

--- a/app/views/shared/_flight_result_card.html.erb
+++ b/app/views/shared/_flight_result_card.html.erb
@@ -34,6 +34,11 @@
         <span class="price-label">Price</span>
         <span class="price-value">₹ <%= number_with_delimiter(flight[:price]) %></span>
     </div>
+    <% unless local_assigns[:hide_book_button] %>
+      <div class="book-button-container">
+        <%= link_to 'Book', book_flight_path(flight: flight), class: 'book-button' %>
+      </div>
+    <% end %>
     </div>
   </div>
 </div>
