--- a/app/assets/stylesheets/flight_result_card.css
+++ b/app/assets/stylesheets/flight_result_card.css
@@ -4,7 +4,7 @@
   border-radius: 16px;
   margin: 40px auto 20px;
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.05);
-  max-width: 1000px;
+  max-width: 1200px;
   width: 90%;
   display: flex;
   flex-direction: column;
@@ -46,7 +46,6 @@
   justify-content: space-between;
   flex-wrap: wrap;
    gap: 20px; 
-  /* width: 100%;  */
   min-width: 800px;
 }
 
@@ -60,7 +59,6 @@
 
 .flight-icon {
   font-size: 1.8rem;
-  color: #3b82f6;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -99,10 +97,7 @@
   flex-direction: column;
   gap: 4px;
   text-align: center;
-  /* flex: 1; */
   min-width: 100px;
-  /* max-width: 400px; */
-  /* background-color: red; */
 }
 
 .time,
@@ -147,6 +142,30 @@
   font-weight: 600;
   padding: 2px 4px;
   border-radius: 4px;
+}
+.book-button-container {
+  min-width: 120px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.book-button {
+  background-color: #000080;
+  color: white;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: 600;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-decoration: none;
+}
+
+.book-button:hover {
+  background-color: #ff6b35;
 }
 @media (max-width: 768px) {
 
