Modify source and destinations input placeholders

--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -7,7 +7,7 @@
           <label for="source-input">Source</label>
           <%= render 'shared/input_dropdown', {
               id: 'source-input',
-              placeholder: 'Enter source city',
+              placeholder: 'Enter source',
               name: 'source',
               value: params[:source],
               options: ['Delhi', 'Mumbai', 'Bengaluru', 'Hyderabad', 'Chennai', 'Kolkata', 'Ahmedabad', 'Pune', 'Goa', 'Jaipur']
@@ -18,7 +18,7 @@
           <label for="destination-input">Destination</label>
           <%= render 'shared/input_dropdown', {
               id: 'destination-input',
-              placeholder: 'Enter destination city',
+              placeholder: 'Enter destination',
               name: 'destination',
               value: params[:destination],
               options: ['Delhi', 'Mumbai', 'Bengaluru', 'Hyderabad', 'Chennai', 'Kolkata', 'Ahmedabad', 'Pune', 'Goa', 'Jaipur']
