Add required fields to source and destination

--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -10,7 +10,8 @@
               placeholder: 'Enter source city',
               name: 'source',
               value: params[:source],
-              options: ['Delhi', 'Mumbai', 'Bengaluru', 'Hyderabad', 'Chennai', 'Kolkata', 'Ahmedabad', 'Pune', 'Goa', 'Jaipur']
+              options: ['Delhi', 'Mumbai', 'Bengaluru', 'Hyderabad', 'Chennai', 'Kolkata', 'Ahmedabad', 'Pune', 'Goa', 'Jaipur'],
+              required:true
           } %>
         </div>
 
@@ -21,7 +22,8 @@
               placeholder: 'Enter destination city',
               name: 'destination',
               value: params[:destination],
-              options: ['Delhi', 'Mumbai', 'Bengaluru', 'Hyderabad', 'Chennai', 'Kolkata', 'Ahmedabad', 'Pune', 'Goa', 'Jaipur']
+              options: ['Delhi', 'Mumbai', 'Bengaluru', 'Hyderabad', 'Chennai', 'Kolkata', 'Ahmedabad', 'Pune', 'Goa', 'Jaipur'],
+              required:true
           } %>
         </div>
 
