Modify booking confirmation along with flight details

--- a/app/views/flights/book.html.erb
+++ b/app/views/flights/book.html.erb
@@ -4,7 +4,7 @@
       <h1>Confirm Your Flight</h1>
     </div>
     <div class="booking-details-container">
-      <%= render 'shared/flight_result_card', flight: @flight, hide_book_button: true %>
+      <%= render 'shared/flight_detailed_card', flight: @flight %>
 
       <div class="fare-summary-card">
         <h2>Fare Summary</h2>
